k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: go-web-app
  labels:
    app: go-web-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: go-web-app

  template:
    metadata:
      labels:
        app: go-web-app

    spec:
      containers:
        - name: anand-container
          image: relaxamj/go-web:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"
